<resources>
    <string name="app_name">BookZap</string>
    <string name="book_zap_book">Book</string>
    <string name="drawer_close">Drawer Close</string>
    <string name="drawer_open">Drawer Open</string>
    <string name="author_name">Author Name</string>
    <string name="TODO">TODO</string>
    <string name="barcode_info">Barcode Info</string>
    <string name="add_manually">Manually</string>
    <string name="add_scan">Scan barcode</string>
    <string name="account_create_link">Not got an account? Click here</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="enter_email">Enter email</string>
    <string name="enter_password">Enter password</string>
    <string name="book_title">Book title</string>
    <string name="book_progress">Book Progress</string>
    <string name="create">Create</string>
    <string name="add_isbn">ISBN:</string>
    <string name="add_title">Title:</string>
    <string name="add_author">Author:</string>
    <string name="read">Read</string>
    <string name="library">Library</string>
    <string name="reading_list">Reading List</string>
    <string name="hello">Hello</string>
    <string name="favourite">Favourite</string>
    <string name="add">Add</string>
    <string name="oath_desc">From the bestselling author who completed Robert Jordan\'s epic Wheel of Time series comes a new, original creation that matches anything else in modern fantasy for epic scope, thrilling imagination, superb characters and sheer addictiveness.

In Oathbringer, the third volume of the New York Times bestselling Stormlight Archive series, humanity faces a new Desolation with the return of the Voidbringers, a foe whose numbers are as great as their thirst for vengeance.
The Alethi armies commanded by Dalinar Kholin won a fleeting victory at a terrible cost: The enemy Parshendi summoned the violent Everstorm, and now its destruction sweeps the world and its passing awakens the once peaceful and subservient parshmen to the true horror of their millennia-long enslavement by humans. While on a desperate flight to warn his family of the threat, Kaladin Stormblessed must come to grips with the fact that their newly kindled anger may be wholly justified.
Nestled in the mountains high above the storms, in the tower city of Urithiru, Shallan Davar investigates the wonders of the ancient stronghold of the Knights Radiant and unearths the dark secrets lurking in its depths. And Dalinar realizes that his holy mission to unite his homeland of Alethkar was too narrow in scope. Unless all the nations of Roshar can put Dalinar's blood-soaked past aside and stand together - and unless Dalinar himself can confront that past - even the restoration of the Knights Radiant will not avert the end of civilization.
    </string>
    <string name="lev_desc">Humanity has colonised the solar system - Mars, the Moon, the Asteroid Belt and beyond - but the stars are still out of our reach.

Jim Holden is an officer on an ice miner making runs from the rings of Saturn to the mining stations of the Belt. When he and his crew discover a derelict ship called the Scopuli, they suddenly find themselves in possession of a deadly secret. A secret that someone is willing to kill for, and on an unimaginable scale. War is coming to the system, unless Jim can find out who abandoned the ship and why.

Detective Miller is looking for a girl. One girl in a system of billions, but her parents have money - and money talks. When the trail leads him to the Scopuli and Holden, they both realise this girl may hold the key to everything.

Holden and Miller must thread the needle between the Earth government, the Outer Planet revolutionaries and secret corporations, and the odds are against them. But out in the Belt, the rules are different, and one small ship can change the fate of the universe.</string>
</resources>
