<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colourPrimaryDark"
    android:elevation="0dp"
    tools:layout_editor_absoluteY="25dp">

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="top|start"
        android:layout_marginBottom="56dp"
        android:baselineAligned="false"
        android:gravity="top"
        android:orientation="horizontal"
        android:visibility="visible">

        <FrameLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            android:layout_weight="1">

            <ImageView
                android:id="@+id/book_cover"
                android:layout_width="match_parent"
                android:layout_height="334dp"
                android:contentDescription="@string/TODO"
                android:cropToPadding="false"
                android:maxHeight="350dp"
                android:maxWidth="200dp"
                android:minHeight="350dp"
                android:minWidth="200dp"
                android:scaleType="centerInside" />

            <TextView
                android:id="@+id/is_read_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="top|start"
                android:layout_margin="5dp"
                android:background="@drawable/ic_rounded_corner_read"
                android:elevation="2dp"
                android:paddingBottom="1dp"
                android:paddingEnd="3dp"
                android:paddingStart="3dp"
                android:paddingTop="1dp"
                android:text="@string/read"
                android:textColor="@android:color/white"
                android:visibility="gone" />

        </FrameLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:orientation="vertical">

            <TextView
                android:id="@+id/book_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:text="@string/book_title"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/author_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:text="@string/author_name"
                android:textAlignment="viewStart" />

            <android.support.constraint.ConstraintLayout
                android:id="@+id/progress_layout"
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <ProgressBar
                    android:id="@+id/progress_read"
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="match_parent"
                    android:layout_height="18dp"
                    android:layout_margin="8dp"
                    android:layout_marginEnd="2dp"
                    android:layout_marginStart="2dp"
                    android:layout_marginTop="8dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/progress_read_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/book_progress"
                    android:textSize="12sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="@+id/progress_read"
                    app:layout_constraintTop_toBottomOf="@+id/progress_read" />

            </android.support.constraint.ConstraintLayout>

        </LinearLayout>

    </LinearLayout>

    <android.support.v7.widget.Toolbar
        android:id="@+id/book_toolbar"
        android:layout_width="match_parent"
        android:layout_height="56dp"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_gravity="bottom|start"
        android:background="?android:attr/colorPrimary"
        android:elevation="5dp"
        android:gravity="bottom"
        android:minHeight="?android:attr/actionBarSize"
        android:theme="?android:attr/actionBarTheme"
        tools:layout_editor_absoluteY="602dp" />
</RelativeLayout>